tests/snapshots/formats__doc__word95.doc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ word95.doc — Word 6.0/95 document; Compound File v3, 512-byte sectors, 4 directory entries  [0x0+0x1800]
  ▾ Header  [0x0+0x4c]
      Signature: d0 cf 11 e0 a1 b1 1a e1  |........|  [0x0+0x8]
      CLSID: {00000000-0000-0000-0000-000000000000}  [0x8+0x10]
      Minor version: 0x3e  [0x18+0x2]
      Major version: version 3 (0x3)  [0x1a+0x2]
      Byte order: little-endian (0xfffe)  [0x1c+0x2]
      Sector shift: 9 — 512 bytes  [0x1e+0x2]
      Mini sector shift: 6 — 64 bytes  [0x20+0x2]
      Reserved: 00 00 00 00 00 00  |......|  [0x22+0x6]
      Number of directory sectors: 0  [0x28+0x4]
      Number of FAT sectors: 1  [0x2c+0x4]
      First directory sector: 9 — sector 9  [0x30+0x4]
      Transaction signature: 0  [0x34+0x4]
      Mini stream cutoff size: 4096  [0x38+0x4]
      First MiniFAT sector: 4294967294 — ENDOFCHAIN  [0x3c+0x4]
      Number of MiniFAT sectors: 0  [0x40+0x4]
      First DIFAT sector: 4294967294 — ENDOFCHAIN  [0x44+0x4]
      Number of DIFAT sectors: 0  [0x48+0x4]
  ▾ DIFAT — 1 FAT sectors  [0x4c+0x1b4]
      FAT sector 0: 10  [0x4c+0x4] → 0x1600+0x200
      Unused entries: 0xffffffff — 108 × FREESECT  [0x50+0x1b0]
  ▾ FAT — 1 sectors
    ▾ FAT sector 0 — sector 10: entries for sectors 0..128  [0x1600+0x200]
        Sector 0: 1 — next: 1  [0x1600+0x4]
        Sector 1: 2 — next: 2  [0x1604+0x4]
        Sector 2: 3 — next: 3  [0x1608+0x4]
        Sector 3: 4 — next: 4  [0x160c+0x4]
        Sector 4: 5 — next: 5  [0x1610+0x4]
        Sector 5: 6 — next: 6  [0x1614+0x4]
        Sector 6: 7 — next: 7  [0x1618+0x4]
        Sector 7: 8 — next: 8  [0x161c+0x4]
        Sector 8: 4294967294 — ENDOFCHAIN  [0x1620+0x4]
        Sector 9: 4294967294 — ENDOFCHAIN  [0x1624+0x4]
        Sector 10: 4294967293 — FATSECT  [0x1628+0x4]
  ▾ Free sectors
  ▾ Directory — 4 entries  [#1:0x0+0x200]
    ▾ Entry 0 — root storage Root Entry  [#1:0x0+0x80]
        Name: "Root Entry"  [#1:0x0+0x40]
        Name length: 22  [#1:0x40+0x2]
        Object type: root storage (0x5)  [#1:0x42+0x1]
        Color: black (0x1)  [#1:0x43+0x1]
        Left sibling: 4294967295 — none  [#1:0x44+0x4]
        Right sibling: 4294967295 — none  [#1:0x48+0x4]
        Child: 1 — entry 1  [#1:0x4c+0x4]
        CLSID: {00020900-0000-0000-c000-000000000046}  [#1:0x50+0x10]
        State bits: 0x0  [#1:0x60+0x4]
        Creation time: 1601-01-01 00:00:00 UTC  [#1:0x64+0x8]
        Modification time: 1601-01-01 00:00:00 UTC  [#1:0x6c+0x8]
        Starting sector: 4294967294 — ENDOFCHAIN  [#1:0x74+0x4]
        Stream size: 0  [#1:0x78+0x8]
    ▾ Entry 1 — stream WordDocument  [#1:0x80+0x80]
        Name: "WordDocument"  [#1:0x80+0x40]
        Name length: 26  [#1:0xc0+0x2]
        Object type: stream (0x2)  [#1:0xc2+0x1]
        Color: black (0x1)  [#1:0xc3+0x1]
        Left sibling: 4294967295 — none  [#1:0xc4+0x4]
        Right sibling: 4294967295 — none  [#1:0xc8+0x4]
        Child: 4294967295 — none  [#1:0xcc+0x4]
        CLSID: {00000000-0000-0000-0000-000000000000}  [#1:0xd0+0x10]
        State bits: 0x0  [#1:0xe0+0x4]
        Creation time: 1601-01-01 00:00:00 UTC  [#1:0xe4+0x8]
        Modification time: 1601-01-01 00:00:00 UTC  [#1:0xec+0x8]
        Starting sector: 0 — sector 0  [#1:0xf4+0x4]
        Stream size: 4608  [#1:0xf8+0x8]
    ▾ Entry 2 — unallocated  [#1:0x100+0x80]
        Name: ""  [#1:0x100+0x40]
        Name length: 0  [#1:0x140+0x2]
        Object type: unallocated (0x0)  [#1:0x142+0x1]
        Color: red (0x0)  [#1:0x143+0x1]
        Left sibling: 4294967295 — none  [#1:0x144+0x4]
        Right sibling: 4294967295 — none  [#1:0x148+0x4]
        Child: 4294967295 — none  [#1:0x14c+0x4]
        CLSID: {00000000-0000-0000-0000-000000000000}  [#1:0x150+0x10]
        State bits: 0x0  [#1:0x160+0x4]
        Creation time: 1601-01-01 00:00:00 UTC  [#1:0x164+0x8]
        Modification time: 1601-01-01 00:00:00 UTC  [#1:0x16c+0x8]
        Starting sector: 0 — sector 0  [#1:0x174+0x4]
        Stream size: 0  [#1:0x178+0x8]
    ▾ Entry 3 — unallocated  [#1:0x180+0x80]
        Name: ""  [#1:0x180+0x40]
        Name length: 0  [#1:0x1c0+0x2]
        Object type: unallocated (0x0)  [#1:0x1c2+0x1]
        Color: red (0x0)  [#1:0x1c3+0x1]
        Left sibling: 4294967295 — none  [#1:0x1c4+0x4]
        Right sibling: 4294967295 — none  [#1:0x1c8+0x4]
        Child: 4294967295 — none  [#1:0x1cc+0x4]
        CLSID: {00000000-0000-0000-0000-000000000000}  [#1:0x1d0+0x10]
        State bits: 0x0  [#1:0x1e0+0x4]
        Creation time: 1601-01-01 00:00:00 UTC  [#1:0x1e4+0x8]
        Modification time: 1601-01-01 00:00:00 UTC  [#1:0x1ec+0x8]
        Starting sector: 0 — sector 0  [#1:0x1f4+0x4]
        Stream size: 0  [#1:0x1f8+0x8]
  ▾ Root Entry: {00020900-0000-0000-c000-000000000046} — Word 6.0/95 document  [#1:0x0+0x80]
    ▾ Directory entry  [#1:0x0+0x80]
        Name: "Root Entry"  [#1:0x0+0x40]
        Name length: 22  [#1:0x40+0x2]
        Object type: root storage (0x5)  [#1:0x42+0x1]
        Color: black (0x1)  [#1:0x43+0x1]
        Left sibling: 4294967295 — none  [#1:0x44+0x4]
        Right sibling: 4294967295 — none  [#1:0x48+0x4]
        Child: 1 — entry 1  [#1:0x4c+0x4]
        CLSID: {00020900-0000-0000-c000-000000000046}  [#1:0x50+0x10]
        State bits: 0x0  [#1:0x60+0x4]
        Creation time: 1601-01-01 00:00:00 UTC  [#1:0x64+0x8]
        Modification time: 1601-01-01 00:00:00 UTC  [#1:0x6c+0x8]
        Starting sector: 4294967294 — ENDOFCHAIN  [#1:0x74+0x4]
        Stream size: 0  [#1:0x78+0x8]
    ▾ WordDocument — Word 6.0/95 document, 57 characters of main text  [#1:0x80+0x80]
      ▾ Directory entry  [#1:0x80+0x80]
          Name: "WordDocument"  [#1:0x80+0x40]
          Name length: 26  [#1:0xc0+0x2]
          Object type: stream (0x2)  [#1:0xc2+0x1]
          Color: black (0x1)  [#1:0xc3+0x1]
          Left sibling: 4294967295 — none  [#1:0xc4+0x4]
          Right sibling: 4294967295 — none  [#1:0xc8+0x4]
          Child: 4294967295 — none  [#1:0xcc+0x4]
          CLSID: {00000000-0000-0000-0000-000000000000}  [#1:0xd0+0x10]
          State bits: 0x0  [#1:0xe0+0x4]
          Creation time: 1601-01-01 00:00:00 UTC  [#1:0xe4+0x8]
          Modification time: 1601-01-01 00:00:00 UTC  [#1:0xec+0x8]
          Starting sector: 0 — sector 0  [#1:0xf4+0x4]
          Stream size: 4608  [#1:0xf8+0x8]
      ▾ Sector chain — sectors
          Link 0: 0 — sector → 0x200+0x200
          Link 1: 1 — sector → 0x400+0x200
          Link 2: 2 — sector → 0x600+0x200
          Link 3: 3 — sector → 0x800+0x200
          Link 4: 4 — sector → 0xa00+0x200
          Link 5: 5 — sector → 0xc00+0x200
          Link 6: 6 — sector → 0xe00+0x200
          Link 7: 7 — sector → 0x1000+0x200
          Link 8: 8 — sector → 0x1200+0x200
      ▾ File Information Block — nFib 0x0068 (Word 95), text at 0x200–0x239  [#2:0x0+0x192]
        ▾ Header  [#2:0x0+0x58]
            wIdent: 0xa5dc  [#2:0x0+0x2]
            nFib: Word 95 (0x68)  [#2:0x2+0x2]
            nProduct: 0x0  [#2:0x4+0x2]
            lid: 0x424 — 0x0424 (sl-SI)  [#2:0x6+0x2]
            pnNext: 0  [#2:0x8+0x2]
            Flags: 0x0 [] — cQuickSaves 0  [#2:0xa+0x2]
            nFibBack: 0x65  [#2:0xc+0x2]
            lKey: 0x0  [#2:0xe+0x4]
            envr: Windows (0x0)  [#2:0x12+0x1]
            Flags 2: 0x0 []  [#2:0x13+0x1]
            chse: Windows ANSI (0x0)  [#2:0x14+0x2]
            chseTables: Windows ANSI (0x0)  [#2:0x16+0x2]
            fcMin: 0x200  [#2:0x18+0x4]
            fcMac: 0x239  [#2:0x1c+0x4]
            cbMac: 4608  [#2:0x20+0x4]
            fcSpare0: 0  [#2:0x24+0x4]
            fcSpare1: 0  [#2:0x28+0x4]
            fcSpare2: 0  [#2:0x2c+0x4]
            fcSpare3: 0  [#2:0x30+0x4]
            ccpText: 57  [#2:0x34+0x4]
            ccpFtn: 0  [#2:0x38+0x4]
            ccpHdd: 0  [#2:0x3c+0x4]
            ccpMcr: 0  [#2:0x40+0x4]
            ccpAtn: 0  [#2:0x44+0x4]
            ccpEdn: 0  [#2:0x48+0x4]
            ccpTxbx: 0  [#2:0x4c+0x4]
            ccpHdrTxbx: 0  [#2:0x50+0x4]
            ccpSpare2: 0  [#2:0x54+0x4]
        ▾ fc/lcb pairs — 38 pairs, structures in the WordDocument stream  [#2:0x58+0x130]
            StshfOrig: 0x0 — absent  [#2:0x58+0x8]
            Stshf: 0x0 — absent  [#2:0x60+0x8]
            PlcffndRef: 0x0 — absent  [#2:0x68+0x8]
            PlcffndTxt: 0x0 — absent  [#2:0x70+0x8]
            PlcfandRef: 0x0 — absent  [#2:0x78+0x8]
            PlcfandTxt: 0x0 — absent  [#2:0x80+0x8]
            PlcfSed: 0x0 — absent  [#2:0x88+0x8]
            PlcPad: 0x0 — absent  [#2:0x90+0x8]
            PlcfPhe: 0x0 — absent  [#2:0x98+0x8]
            SttbfGlsy: 0x0 — absent  [#2:0xa0+0x8]
            PlcfGlsy: 0x0 — absent  [#2:0xa8+0x8]
            PlcfHdd: 0x0 — absent  [#2:0xb0+0x8]
            PlcfBteChpx: 0x0 — absent  [#2:0xb8+0x8]
            PlcfBtePapx: 0x0 — absent  [#2:0xc0+0x8]
            PlcfSea: 0x0 — absent  [#2:0xc8+0x8]
            SttbfFfn: 0x400 — 62 bytes at 0x400  [#2:0xd0+0x8] → #2:0x400+0x3e
            PlcfFldMom: 0x0 — absent  [#2:0xd8+0x8]
            PlcfFldHdr: 0x0 — absent  [#2:0xe0+0x8]
            PlcfFldFtn: 0x0 — absent  [#2:0xe8+0x8]
            PlcfFldAtn: 0x0 — absent  [#2:0xf0+0x8]
            PlcfFldMcr: 0x0 — absent  [#2:0xf8+0x8]
            SttbfBkmk: 0x0 — absent  [#2:0x100+0x8]
            PlcfBkf: 0x0 — absent  [#2:0x108+0x8]
            PlcfBkl: 0x0 — absent  [#2:0x110+0x8]
            Cmds: 0x0 — absent  [#2:0x118+0x8]
            Unused1: 0x0 — absent  [#2:0x120+0x8]
            SttbfMcr: 0x0 — absent  [#2:0x128+0x8]
            PrDrvr: 0x0 — absent  [#2:0x130+0x8]
            PrEnvPort: 0x0 — absent  [#2:0x138+0x8]
            PrEnvLand: 0x0 — absent  [#2:0x140+0x8]
            Wss: 0x0 — absent  [#2:0x148+0x8]
            Dop: 0x43e — 88 bytes at 0x43e  [#2:0x150+0x8] → #2:0x43e+0x58
            SttbfAssoc: 0x496 — 45 bytes at 0x496  [#2:0x158+0x8] → #2:0x496+0x2d
            Clx: 0x0 — absent  [#2:0x160+0x8]
            PlcfPgdFtn: 0x0 — absent  [#2:0x168+0x8]
            AutosaveSource: 0x0 — absent  [#2:0x170+0x8]
            GrpXstAtnOwners: 0x0 — absent  [#2:0x178+0x8]
            SttbfAtnBkmk: 0x0 — absent  [#2:0x180+0x8]
        ▾ Formatting pages  [#2:0x188+0xa]
            wSpare4Fib: 0  [#2:0x188+0x2]
            pnChpFirst: 0  [#2:0x18a+0x2]
            pnPapFirst: 0  [#2:0x18c+0x2]
            cpnBteChp: 0  [#2:0x18e+0x2]
            cpnBtePap: 0  [#2:0x190+0x2]
      ▾ Text — "Hitri konj in ukradeni totem.\rŠumniki: č, š, ž; Č, Š, Ž.\r"  [#2:0x200+0x39]
          Main document: "Hitri konj in ukradeni totem.\rŠumniki: č, š, ž; Č, Š, Ž.\r" — 57 characters from CP 0
      ▾ Fonts — 3 fonts: Times New Roman, Symbol, Times New Roman CE  [#2:0x400+0x3e]
          cbSttbfFfn: 62  [#2:0x400+0x2]
        ▾ Font 0: "Times New Roman" — FF_ROMAN, ANSI_CHARSET  [#2:0x402+0x16]
            cbFfnM1: 21  [#2:0x402+0x1]
            Flags: 0x12 — pitch variable, FF_ROMAN  [#2:0x403+0x1]
            wWeight: 400  [#2:0x404+0x2]
            chs: ANSI_CHARSET (0x0)  [#2:0x406+0x1]
            ibszAlt: 0  [#2:0x407+0x1]
            szFfn: "Times New Roman"  [#2:0x408+0x10]
        ▾ Font 1: "Symbol" — FF_ROMAN, SYMBOL_CHARSET  [#2:0x418+0xd]
            cbFfnM1: 12  [#2:0x418+0x1]
            Flags: 0x10 — pitch default, FF_ROMAN  [#2:0x419+0x1]
            wWeight: 400  [#2:0x41a+0x2]
            chs: SYMBOL_CHARSET (0x2)  [#2:0x41c+0x1]
            ibszAlt: 0  [#2:0x41d+0x1]
            szFfn: "Symbol"  [#2:0x41e+0x7]
        ▾ Font 2: "Times New Roman CE" — FF_ROMAN, EASTEUROPE_CHARSET  [#2:0x425+0x19]
            cbFfnM1: 24  [#2:0x425+0x1]
            Flags: 0x12 — pitch variable, FF_ROMAN  [#2:0x426+0x1]
            wWeight: 400  [#2:0x427+0x2]
            chs: EASTEUROPE_CHARSET (0xee)  [#2:0x429+0x1]
            ibszAlt: 0  [#2:0x42a+0x1]
            szFfn: "Times New Roman CE"  [#2:0x42b+0x13]
      ▾ Associated strings — 8 strings: "Synthetic Word 95", "fillyfoal", "fillyfoal"  [#2:0x496+0x2d]
          cbSttbf: 45  [#2:0x496+0x2]
          ibstAssocFileNext: ""  [#2:0x498+0x1]
          ibstAssocDot (template): ""  [#2:0x499+0x1]
          ibstAssocTitle: "Synthetic Word 95"  [#2:0x49a+0x12]
          ibstAssocSubject: ""  [#2:0x4ac+0x1]
          ibstAssocKeyWords: ""  [#2:0x4ad+0x1]
          ibstAssocComments: ""  [#2:0x4ae+0x1]
          ibstAssocAuthor: "fillyfoal"  [#2:0x4af+0xa]
          ibstAssocLastRevBy: "fillyfoal"  [#2:0x4b9+0xa]
      ▾ Document properties — created 2001-02-03 04:05 (Saturday), revision 2  [#2:0x43e+0x58]
          Settings: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [#2:0x43e+0x14]
          dttmCreated: 0xc6521905 — 2001-02-03 04:05 (Saturday), local time  [#2:0x452+0x4]
          dttmRevised: 0xc6521909 — 2001-02-03 04:09 (Saturday), local time  [#2:0x456+0x4]
          dttmLastPrint: 0x0 — not set  [#2:0x45a+0x4]
          nRevision: 2  [#2:0x45e+0x2]
          tmEdited: 3  [#2:0x460+0x4]
          cWords: 9  [#2:0x464+0x4]
          cCh: 57  [#2:0x468+0x4]
          cPg: 1  [#2:0x46c+0x2]
          cParas: 2  [#2:0x46e+0x4]
          Remaining settings: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [#2:0x472+0x24]
